--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,37 +1,52 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="1538.4615"
-    android:viewportHeight="1538.4615">
-  <group android:translateX="269.23077"
-      android:translateY="269.23077">
+    android:viewportWidth="909.0909"
+    android:viewportHeight="909.0909">
+  <group android:translateX="204.54546"
+      android:translateY="204.54546">
     <path
-        android:pathData="M471,125.1c-42.6,1.7 -89.4,11.9 -126.5,27.7 -26.3,11.1 -60.2,29.8 -79.2,43.7 -26.6,19.5 -64.2,56.3 -78.2,76.5 -1.3,1.9 -4.5,6.1 -7,9.2 -11.5,14.4 -31.9,51.2 -43.3,78.3 -34.1,80.5 -37.2,181.8 -8.1,267.5 9.9,29.3 36.2,79.8 51.4,98.8 2.5,3.1 5.7,7.3 7,9.2 10.4,15.1 42.7,48.4 61.8,63.6 16.5,13.2 18.6,14.7 33.1,23.8 6.9,4.3 13.7,8.7 15.1,9.7 4.5,3 33.9,17.4 47.4,23.1 61.5,26.1 138.6,34.5 208.4,22.7 26.9,-4.5 57,-13.1 79.6,-22.7 13.5,-5.7 42.9,-20.1 47.4,-23.1 1.4,-1 8.2,-5.4 15.1,-9.7 14.5,-9.1 16.6,-10.6 33.1,-23.8 19.8,-15.8 52.3,-49.4 62.4,-64.5 1.7,-2.5 4.6,-6.1 6.5,-8.2 3.1,-3.2 4.2,-3.7 10,-4.3 10.8,-1.2 31.1,-5.4 45.8,-9.6 60.7,-17.1 103.8,-49 116.9,-86.5 2.6,-7.4 2.8,-9.2 2.8,-23 0,-13.8 -0.2,-15.6 -2.8,-23 -7.3,-20.8 -23.4,-39.7 -47.7,-56 -10.3,-6.9 -32.2,-17.9 -44.6,-22.5l-9.1,-3.3 -0.6,-15.1c-1.2,-30.9 -9,-71.8 -19.4,-102.6 -9.9,-29.3 -36.2,-79.8 -51.4,-98.8 -2.5,-3.1 -5.7,-7.3 -7,-9.2 -10.4,-15.1 -42.7,-48.4 -61.8,-63.6 -16.5,-13.2 -18.6,-14.7 -33.1,-23.8 -6.9,-4.3 -13.7,-8.7 -15.1,-9.7 -4.5,-3 -33.9,-17.4 -47.4,-23.1 -16.1,-6.9 -31,-11.7 -51.4,-16.7 -37.2,-9.2 -70.4,-12.5 -110.1,-11zM515.6,172c7.1,0.6 16.1,1.7 19.9,2.5 3.9,0.8 11.3,2.1 16.5,3 35.2,5.9 78.3,22.1 107,40.3 16.6,10.6 30.9,20.3 33.5,22.9 1.7,1.6 5.9,5.2 9.5,7.8 8.4,6.4 31.7,29.2 38.3,37.5 2.8,3.6 7.2,8.8 9.7,11.6 4.9,5.5 23,32.2 29.8,44 7.2,12.4 20.3,42.5 25.3,57.7 4.5,14 8.5,30.2 10.9,44.7 0.6,3.6 1.7,9.4 2.5,13 0.7,3.6 1.6,10.8 2,16 0.3,5.2 0.8,10.4 1,11.6l0.4,2 -11.5,-1.7c-21.6,-3.3 -38.1,-4.2 -67.6,-3.6 -37.1,0.7 -61,4 -91.5,12.6 -61,17.3 -104.8,49.8 -116.9,86.9 -2.7,8 -2.9,9.9 -2.9,23.2 0,13.2 0.3,15.2 2.8,22.5 18.4,52.9 97.2,93.5 192,99.1l11.9,0.7 -12.9,12.9c-7,7 -16.4,15.6 -20.7,19.1 -4.4,3.4 -9.6,7.7 -11.5,9.5 -3.2,3 -18.3,13.3 -34.1,23.4 -28.7,18.2 -71.8,34.4 -107,40.3 -5.2,0.9 -12.6,2.2 -16.5,3 -21.5,4.5 -72.5,4.5 -94,-0 -3.8,-0.8 -11.3,-2.1 -16.5,-3 -35.2,-5.9 -78.3,-22.1 -107,-40.3 -16.6,-10.6 -30.9,-20.3 -33.5,-22.9 -1.7,-1.6 -5.9,-5.2 -9.5,-7.9 -8.4,-6.3 -31.7,-29.1 -38.3,-37.4 -2.8,-3.6 -7.2,-8.8 -9.7,-11.6 -4.9,-5.5 -23,-32.2 -29.8,-44 -4.9,-8.5 -19,-39.2 -22.5,-48.9 -4.1,-11.5 -9.5,-31.3 -11.7,-42.8 -1.1,-5.9 -2.9,-15.3 -4,-21 -5.3,-28 -5.3,-72.4 0,-100.5 1.1,-5.6 2.9,-15 4,-21 2.2,-11.4 7.6,-31.2 11.7,-42.7 3.5,-9.7 17.6,-40.4 22.5,-48.9 6.8,-11.8 24.9,-38.5 29.8,-44 2.5,-2.8 6.9,-8 9.7,-11.6 6.6,-8.3 29.9,-31.1 38.3,-37.5 3.6,-2.6 7.8,-6.2 9.5,-7.8 2.6,-2.6 16.9,-12.3 33.5,-22.9 28.7,-18.2 71.8,-34.4 107,-40.3 5.2,-0.9 12.7,-2.2 16.5,-3.1 14.8,-3.1 50.1,-4.3 74.1,-2.4zM775,513c52.9,3.8 98.1,17.3 131,39.3 4.1,2.7 11.8,9.3 17.1,14.6 10.6,10.6 15.9,19.7 18.1,30.4 4.3,21.8 -15.5,47.8 -51.2,67 -39.6,21.4 -102,33.3 -156.7,29.9 -41.5,-2.6 -77.2,-10.6 -107.3,-24.1 -42.6,-19 -68,-48.3 -63.2,-72.8 4.4,-22.1 27.9,-44.6 63.2,-60.4 41.4,-18.5 97.4,-27.5 149,-23.9z"
-        android:fillColor="#ffffff"
-        android:strokeColor="#00000000"/>
+        android:pathData="M388.923,393.86A199.998,200.004 0,0 1,131.731 411.281,199.998 200.004,0 0,1 71.007,160.748 199.998,200.004 0,0 1,307.631 58.471,199.998 200.004,0 0,1 448.5,274.364"
+        android:strokeLineJoin="round"
+        android:strokeWidth="20"
+        android:fillColor="#00000000"
+        android:strokeColor="#000000"
+        android:fillAlpha="1"/>
     <path
-        android:pathData="M439.5,183.7c-47.5,8.7 -89,24.3 -125.2,47 -11.3,7.1 -14.7,10.5 -16.3,16.3 -1.4,5.2 0.4,10.3 6.2,17.2 4.2,5 9.8,13 14.3,20.2 1.1,1.8 3.7,5.4 5.8,8.2 2.1,2.7 5.6,7.6 7.8,10.9 2.2,3.3 5.8,8.3 8.2,11.2 6.8,8.3 11.2,14.4 14.2,19.8 1.6,2.7 4.9,7.6 7.4,10.8 7.3,9.2 12.7,16.7 16.7,23.2 2.1,3.3 6.3,9.1 9.4,13 3.1,3.8 6.7,8.8 8,11 1.3,2.2 4.2,6.2 6.5,9 4.3,5.2 7.7,10.2 13.2,18.9 1.8,2.8 3.9,5.6 4.7,6.1 0.7,0.6 3.9,4.8 7.1,9.5 9.5,13.8 9.8,14.2 15,21 5.4,6.9 6.5,8.6 16,22.6 3.4,5 7.3,10.6 8.8,12.5 2.1,2.8 2.4,4 1.8,6.9 -0.6,3.4 -4.5,5.9 -124.9,82 -68.3,43.2 -125.6,79.9 -127.3,81.7 -2.8,2.8 -3.2,3.8 -3.2,8.7 0,5.1 0.5,6.3 4.8,12.6 2.6,3.8 5.8,7.8 7,9 3.6,3.3 9.2,4.9 13.3,3.8 1.9,-0.5 59.8,-36.5 128.5,-80l125,-79 4.6,1.2c20,5 41.6,-7.1 46.1,-26.1 3.9,-16 -4.2,-34 -18.4,-40.8 -4.9,-2.4 -4.3,-0.6 -8.1,-22.6 -4.1,-23.4 -7.5,-40.8 -8.5,-44 -0.5,-1.7 -1.2,-5.2 -1.4,-7.9 -0.3,-2.6 -1.2,-8 -2,-12 -4.3,-19.6 -6.6,-31.2 -6.6,-33.5 0,-1.4 -0.8,-5.1 -1.6,-8.1 -0.9,-3 -1.8,-8.2 -1.9,-11.6 -0.2,-3.3 -1.5,-9.6 -3,-13.9 -1.4,-4.2 -2.8,-10.3 -3.1,-13.4 -0.2,-3.1 -0.9,-7.9 -1.4,-10.6 -2.5,-13.1 -4.3,-21.1 -5,-22.5 -0.5,-0.8 -1,-5.2 -1.3,-9.6 -0.3,-4.5 -1,-9 -1.5,-10 -0.5,-1.1 -1.3,-4.1 -1.6,-6.8 -0.4,-2.7 -1,-5.4 -1.3,-5.9 -1.1,-1.9 -3.4,-12.5 -3.8,-18.2 -0.9,-11.6 -1.6,-16.7 -2.5,-18.6 -0.6,-1 -1.2,-3.6 -1.5,-5.9 -0.8,-5.8 -2.9,-9.4 -6.9,-12 -6.1,-3.7 -8.3,-3.8 -22.1,-1.3z"
-        android:fillColor="#ffffff"
-        android:strokeColor="#00000000"/>
+        android:pathData="M287.156,323.407a98.292,69.539 0,1 0,196.584 0a98.292,69.539 0,1 0,-196.584 0z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="20"
+        android:fillColor="#00000000"
+        android:strokeColor="#000000"
+        android:fillAlpha="1"/>
     <path
-        android:pathData="M695.6,566.5c-5.2,1.8 -10,6.7 -12.7,12.9 -1.9,4.1 -2.4,7.4 -2.7,17.1 -0.6,18.5 2.8,29.5 11.1,35.2 3.4,2.4 5.3,2.9 11.7,3.2 9.9,0.4 15.5,-1.8 20,-8 7.6,-10.5 9,-33.7 2.8,-48.1 -4.9,-11.4 -17.9,-16.7 -30.2,-12.3zM708.9,578.5c4.4,2.2 6.1,8.6 6.1,21.9 -0.1,15.2 -2.6,21.7 -8.8,22.9 -3.8,0.7 -7.6,-1.6 -9.8,-6 -2.7,-5.4 -2.8,-29.2 -0.2,-34 3.3,-6 7.5,-7.6 12.7,-4.8z"
-        android:fillColor="#ffffff"
-        android:strokeColor="#00000000"/>
+        android:pathData="m361.571,299.196c-3.919,0 -6.971,1.583 -9.16,4.749 -2.649,3.842 -3.975,10.132 -3.975,18.872 0,8.909 1.206,15.106 3.616,18.589 2.41,3.462 5.582,5.193 9.519,5.193 3.919,0 6.973,-1.583 9.162,-4.749 2.649,-3.842 3.975,-10.155 3.975,-18.937 0,-8.803 -1.317,-15.105 -3.947,-18.905 -2.208,-3.209 -5.271,-4.812 -9.189,-4.812zM409.146,299.196c-0.883,2.829 -2.511,5.308 -4.885,7.44 -2.373,2.111 -4.571,3.548 -6.595,4.308l0,8.074c3.845,-1.457 7.184,-3.705 10.017,-6.745l0,33.534l7.754,0l0,-46.61zM432.078,300.018 L428.105,324.179 434.397,325.225c1.766,-2.259 3.762,-3.389 5.988,-3.389 1.785,0 3.228,0.717 4.332,2.153 1.122,1.414 1.685,3.548 1.685,6.398 0,3.04 -0.563,5.319 -1.685,6.839 -1.122,1.499 -2.493,2.247 -4.112,2.247 -1.417,0 -2.667,-0.58 -3.752,-1.741 -1.085,-1.182 -1.739,-2.775 -1.96,-4.781l-7.727,0.916c0.46,3.884 1.868,6.978 4.223,9.279 2.355,2.301 5.4,3.452 9.135,3.452 4.673,0 8.324,-2.047 10.954,-6.143 1.932,-2.998 2.899,-6.408 2.899,-10.229 0,-4.581 -1.197,-8.308 -3.588,-11.179 -2.392,-2.871 -5.308,-4.306 -8.748,-4.306 -1.803,0 -3.569,0.495 -5.298,1.488l1.214,-7.883l14.626,0l0,-8.329zM361.571,306.573c0.938,0 1.768,0.349 2.485,1.046 0.736,0.676 1.341,2.036 1.82,4.084 0.478,2.027 0.718,5.764 0.718,11.21 0,5.447 -0.267,9.309 -0.8,11.589 -0.405,1.773 -0.974,3.009 -1.71,3.705 -0.736,0.676 -1.574,1.013 -2.512,1.013 -0.938,0 -1.775,-0.337 -2.511,-1.013 -0.717,-0.676 -1.316,-2.026 -1.794,-4.053 -0.478,-2.048 -0.717,-5.795 -0.717,-11.241 0,-5.447 0.267,-9.321 0.8,-11.622 0.405,-1.773 0.974,-2.996 1.71,-3.672 0.736,-0.697 1.572,-1.046 2.511,-1.046zM326.001,306.667l0,12.066l-10.597,0l0,8.327l10.597,0l0,12.066l7.065,0l0,-12.066l10.624,0l0,-8.327l-10.624,0l0,-12.066zM381.578,336.908l0,8.898l7.754,0l0,-8.898z"
+        android:strokeWidth="0.60000002"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"
+        android:fillAlpha="1"/>
     <path
-        android:pathData="M782.9,571.2c-2.7,4.8 -6.8,7.6 -13.1,8.6l-4.3,0.8 0,4.9 0,5 8,0.5 8,0.5 0.3,21.3 0.2,21.3 6.8,-0.3 6.7,-0.3 0,-33 0,-33 -5.1,-0.3c-5.2,-0.3 -5.2,-0.3 -7.5,4z"
-        android:fillColor="#ffffff"
-        android:strokeColor="#00000000"/>
+        android:pathData="m103.225,174.475a165.005,165.07 0,0 1,105.166 -84.287l41.593,159.74z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="20"
+        android:fillColor="#000000"
+        android:strokeColor="#000000"
+        android:fillAlpha="1"/>
     <path
-        android:pathData="M821.5,568.1c-0.7,1 -6.5,32 -6.5,34.5 0,1 1.6,1.4 6,1.4 4.7,-0 6.7,-0.5 9.6,-2.5 4.8,-3.3 9.4,-3.2 13.3,-0 7.6,6.5 5.4,18.8 -3.8,21.6 -4.9,1.5 -8.7,-0.2 -12,-5.4 -2.4,-3.6 -2.6,-3.7 -8.8,-3.7l-6.3,-0 0,3c0,4.2 3.3,10.4 6.9,12.9 7.1,5.1 21.1,6.8 28.9,3.5 15,-6.2 19.1,-29 7.3,-39.7 -6.1,-5.5 -13.8,-7 -21.6,-4.2 -2.2,0.8 -4.2,1.5 -4.4,1.5 -0.8,-0 1.1,-10.5 2.1,-11.7 0.7,-0.9 4.7,-1.3 13.8,-1.3l12.8,-0 0.3,-3.3c0.2,-1.7 0.3,-4.2 0.1,-5.5 -0.3,-2.2 -0.4,-2.2 -18.7,-2.2 -11.9,-0 -18.6,0.4 -19,1.1z"
-        android:fillColor="#ffffff"
-        android:strokeColor="#00000000"/>
+        android:pathData="M249.984,249.928 L128.717,362.557"
+        android:strokeAlpha="1"
+        android:strokeLineJoin="miter"
+        android:strokeWidth="20"
+        android:fillColor="#00000000"
+        android:strokeColor="#000000"
+        android:strokeLineCap="round"/>
     <path
-        android:pathData="M643.5,587.2c-0.3,0.7 -0.6,4.9 -0.7,9.3l-0.3,8 -9,0.5 -9,0.5 0,4.5 0,4.5 9,0.5 9,0.5 0.5,9 0.5,9 5.3,0.3 5.2,0.3 0,-8.3c0,-5.2 0.5,-8.9 1.2,-9.6 0.7,-0.7 4.4,-1.2 9.5,-1.2l8.3,-0 0,-5 0,-5 -8.5,-0c-10.2,-0 -10.5,-0.4 -10.5,-11.4l0,-7.6 -5,-0c-3.2,-0 -5.2,0.5 -5.5,1.2z"
-        android:fillColor="#ffffff"
-        android:strokeColor="#00000000"/>
-    <path
-        android:pathData="M736.7,619.7c-0.9,0.8 -0.9,10.6 -0.1,12.7 0.5,1.3 2.2,1.6 8,1.6l7.4,-0 0,-7.5 0,-7.5 -7.3,-0c-4.1,-0 -7.7,0.3 -8,0.7z"
-        android:fillColor="#ffffff"
-        android:strokeColor="#00000000"/>
+        android:pathData="M250,250m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
+        android:strokeLineJoin="round"
+        android:strokeWidth="20"
+        android:fillColor="#000000"
+        android:strokeColor="#000000"
+        android:fillAlpha="1"
+        android:strokeLineCap="round"/>
   </group>
 </vector>
